<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/logo1"
    tools:context="com.utng.vgutierrez.login.RegistrationActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_user"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_size"
        android:textSize="@dimen/margin_top"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/et_email"
        android:hint="@string/txt_name"
        android:textColorHint="@color/colorBlack"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginRight="@dimen/rigth_size"
        android:layout_marginLeft="@dimen/left_size"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:hint="@string/txt_password"
        android:textColorHint="@color/colorBlack"
        android:singleLine="true"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginRight="@dimen/rigth_size"
        android:layout_marginLeft="@dimen/left_size"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_registrar"
        android:text="@string/txt_registry"
        android:layout_marginBottom="@dimen/bottom_size"
        android:layout_marginRight="@dimen/rigth_size"
        android:layout_marginLeft="@dimen/left_size"
        />


</LinearLayout>
